# eorzea-fishwatcher

./: .env.example  Cargo.toml  README.md  area.json  version.json
src/: area.rs  database.rs  main.rs  weather.rs
