[package]
name = "eorzea-fishwatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.38"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde_json = "1.0.127"
reqwest = { version = "0.12", features = ["json"] }